More work on CMake support (#2)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # SPDX-FileCopyrightText: (C) 2015-2021 Matthias Fehring / www.huessenbergnetz.de
 # SPDX-License-Identifier: BSD-3-Clause
 
-cmake_minimum_required(VERSION 3.12.4 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.14.0 FATAL_ERROR)
 cmake_policy(SET CMP0048 NEW)
 
 project(libHbnSfosComponents
@@ -38,12 +38,18 @@ endif(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 
 option(BUILD_SHARED_LIBS "Enable the build of shared libraries" ON)
 option(ENABLE_MAINTAINER_FLAGS "Enables some build flags used for development" OFF)
-set(I18NDIR "${CMAKE_INSTALL_DATADIR}/libHbnSfosComponentsQt${QT_VERSION_MAJOR}/translations" CACHE PATH "Directory to install translations")
-set(ICONSDIR "${CMAKE_INSTALL_DATADIR}/libHbnSfosComponentsQt${QT_VERSION_MAJOR}/icons" CACHE PATH "Directory to install icon")
-set(QMLDIR "${CMAKE_INSTALL_LIBDIR}/qt${QT_VERSION_MAJOR}/qml" CACHE PATH "Directory to install QML files.")
+set(HBNSC_LIBDIR ${CMAKE_INSTALL_LIBDIR} CACHE PATH "Directory to install libraries.")
+set(HBNSC_I18NDIR ${CMAKE_INSTALL_DATADIR}/libHbnSfosComponentsQt${QT_VERSION_MAJOR}/translations CACHE PATH "Directory to install translations")
+set(HBNSC_ICONSDIR ${CMAKE_INSTALL_DATADIR}/libHbnSfosComponentsQt${QT_VERSION_MAJOR}/icons CACHE PATH "Directory to install icon")
+set(HBNSC_QMLDIR ${CMAKE_INSTALL_LIBDIR}/qt${QT_VERSION_MAJOR}/qml CACHE PATH "Directory to install QML files.")
+
+option(HBNSC_WITH_OPENSSL "Adds the OpenSSL license information to the licenses model. Requires openssl header files." ON)
+option(HBNSC_WITH_NEMONOTIFY "Adds the Nemo Notify lib license information to the licenses model." OFF)
+option(HBNSC_WITH_SQLITE "Adds the SQLite license information to the licenses model. Requires the sqlite header files." OFF)
+option(HBNSC_WITH_DBUS "Adds hhe DBus license information to the licenses model. Requires the dbus header files." OFF)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules/hbnSfosComponents-config.cmake.in
-    ${CMAKE_CURRENT_BINARY_DIR}/HbnSfosComponents${QT_VERSION_MAJOR}Config.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/HbnSfosComponentsQt${QT_VERSION_MAJOR}Config.cmake
     @ONLY
 )
 
@@ -56,6 +62,7 @@ install(FILES ${CMAKE_CURRENT_BINARY_DIR}/HbnSfosComponentsQt${QT_VERSION_MAJOR}
     ${CMAKE_CURRENT_BINARY_DIR}/HbnSfosComponentsQt${QT_VERSION_MAJOR}ConfigVersion.cmake
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/HbnSfosComponentsQt${QT_VERSION_MAJOR}/
     COMPONENT development
+    EXCLUDE_FROM_ALL
 )
 
 install(EXPORT HbnSfosComponentsTargets
@@ -63,6 +70,7 @@ install(EXPORT HbnSfosComponentsTargets
     FILE HbnSfosComponentsQt${QT_VERSION_MAJOR}Targets.cmake
     NAMESPACE HbnSfosComponents::
     COMPONENT development
+    EXCLUDE_FROM_ALL
 )
 
 add_subdirectory(src)
