Use hbn_sfos_gen_translation from HBN_SFOS_Cmake to install translations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,3 +77,4 @@ install(EXPORT HbnSfosComponentsTargets
 add_subdirectory(src)
 add_subdirectory(qml)
 add_subdirectory(images)
+add_subdirectory(translations)
