--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,18 +31,14 @@ endif(${CMAKE_SOURCE_DIR} MATCHES ${CMAKE_BINARY_DIR})
 
 include(GNUInstallDirs)
 
-if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-  set(CMAKE_INSTALL_PREFIX "/usr/local" CACHE PATH "libfuoten default install prefix" FORCE)
-endif(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-
-
 option(BUILD_SHARED_LIBS "Enable the build of shared libraries" ON)
 option(ENABLE_MAINTAINER_FLAGS "Enables some build flags used for development" OFF)
-set(HBNSC_APPNAME "" CACHE STRING "Name of the application the HBN SFOS Components are used for. Used for installation values.")
-set(HBNSC_LIBDIR ${CMAKE_INSTALL_DATADIR}/${HBNSC_APPNAME}/lib CACHE PATH "Directory to install libraries.")
-set(HBNSC_I18NDIR ${CMAKE_INSTALL_DATADIR}/${HBNSC_APPNAME}/translations CACHE PATH "Directory to install translations")
-set(HBNSC_ICONSDIR ${CMAKE_INSTALL_DATADIR}/${HBNSC_APPNAME}/icons CACHE PATH "Directory to install icon")
-set(HBNSC_QMLDIR ${CMAKE_INSTALL_DATADIR}/${HBNSC_APPNAME} CACHE PATH "Directory to install QML files.")
+set(HBNSC_APPNAME ${HARBOUR_APPNAME} CACHE STRING "Name of the application the HBN SFOS Components are used for. Used for installation values.")
+set(HBNSC_BASEDIR ${CMAKE_INSTALL_DATADIR}/harbour-nazzida)
+set(HBNSC_LIBDIR ${HBNSC_BASEDIR}/lib CACHE PATH "Directory to install libraries.")
+set(HBNSC_I18NDIR ${HBNSC_BASEDIR}/translations CACHE PATH "Directory to install translations")
+set(HBNSC_ICONSDIR ${HBNSC_BASEDIR}/icons CACHE PATH "Directory to install icon")
+set(HBNSC_QMLDIR ${HBNSC_BASEDIR} CACHE PATH "Directory to install QML files.")
 
 option(HBNSC_WITH_OPENSSL "Adds the OpenSSL license information to the licenses model. Requires openssl header files." ON)
 option(HBNSC_WITH_NEMONOTIFY "Adds the Nemo Notify lib license information to the licenses model." OFF)
