CMake: fix installation (#2)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ include(GNUInstallDirs)
 option(BUILD_SHARED_LIBS "Enable the build of shared libraries" ON)
 option(ENABLE_MAINTAINER_FLAGS "Enables some build flags used for development" OFF)
 set(HBNSC_APPNAME ${HARBOUR_APPNAME} CACHE STRING "Name of the application the HBN SFOS Components are used for. Used for installation values.")
-set(HBNSC_BASEDIR ${CMAKE_INSTALL_DATADIR}/harbour-nazzida)
+set(HBNSC_BASEDIR ${CMAKE_INSTALL_FULL_DATADIR}/harbour-nazzida)
 set(HBNSC_LIBDIR ${HBNSC_BASEDIR}/lib CACHE PATH "Directory to install libraries.")
 set(HBNSC_I18NDIR ${HBNSC_BASEDIR}/translations CACHE PATH "Directory to install translations")
 set(HBNSC_ICONSDIR ${HBNSC_BASEDIR}/icons CACHE PATH "Directory to install icon")
