Fix license file installation with CMake (#2)

--- a/qml/de/huessenbergnetz/hbnsc/CMakeLists.txt
+++ b/qml/de/huessenbergnetz/hbnsc/CMakeLists.txt
@@ -13,6 +13,7 @@ set(QML_FILES
 
 if(HBNSC_LICENSES)
     set(QML_LICENSE_FILES
+        licenses/LicenseBase.qml
         licenses/LGPLv2_1.qml
         licenses/LGPLv3.qml
         licenses/BSD-3.qml
