Update copyright date

--- a/qml/de/huessenbergnetz/hbnsc/CMakeLists.txt
+++ b/qml/de/huessenbergnetz/hbnsc/CMakeLists.txt
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: (C) 2015-2022 Matthias Fehring / www.huessenbergnetz.de
+# SPDX-License-Identifier: BSD-3-Clause
+
 set(QML_FILES
     AboutPage.qml
     Changelog.qml
