--- a/images/CMakeLists.txt
+++ b/images/CMakeLists.txt
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: (C) 2015-2022 Matthias Fehring / www.huessenbergnetz.de
+# SPDX-License-Identifier: BSD-3-Clause
+
 include(HBNSfosGenerateIcons)
 
 if (HBNSC_ICONSIZES)
