--- a/qml/de/huessenbergnetz/CMakeLists.txt
+++ b/qml/de/huessenbergnetz/CMakeLists.txt
@@ -1,1 +1,4 @@
+# SPDX-FileCopyrightText: (C) 2015-2022 Matthias Fehring / www.huessenbergnetz.de
+# SPDX-License-Identifier: BSD-3-Clause
+
 add_subdirectory(hbnsc)
