Only set some variables if they are not already set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,14 +33,20 @@ include(GNUInstallDirs)
 
 option(BUILD_SHARED_LIBS "Enable the build of shared libraries" ON)
 option(ENABLE_MAINTAINER_FLAGS "Enables some build flags used for development" OFF)
-set(HBNSC_APPNAME "" CACHE STRING "Name of the application the HBN SFOS Components are used for. Used for installation values.")
+if (NOT DEFINED HBNSC_APPNAME)
+    set(HBNSC_APPNAME "" CACHE STRING "Name of the application the HBN SFOS Components are used for. Used for installation values.")
+endif ()
 set(HBNSC_BASEDIR ${CMAKE_INSTALL_FULL_DATADIR}/${HBNSC_APPNAME})
 set(HBNSC_LIBDIR ${HBNSC_BASEDIR}/lib CACHE PATH "Directory to install libraries.")
 set(HBNSC_I18NDIR ${HBNSC_BASEDIR}/translations CACHE PATH "Directory to install translations")
 set(HBNSC_ICONSDIR ${HBNSC_BASEDIR}/icons CACHE PATH "Directory to install icon")
 set(HBNSC_QMLDIR ${HBNSC_BASEDIR} CACHE PATH "Directory to install QML files.")
-set(HBNSC_ICONSIZES "s" CACHE PATH "Semicolon separated list of icon sizes to generate. HBNSC itself only requires small icons.")
-set(HBNSC_LICENSES "" CACHE PATH "Semicolon separated list of licenses to include. By default, all licenses will be included.")
+if (NOT DEFINED HBNSC_ICONSIZES)
+    set(HBNSC_ICONSIZES "s" CACHE STRING "Semicolon separated list of icon sizes to generate. HBNSC itself only requires small icons.")
+endif ()
+if (NOT DEFINED HBNSC_LICENSES)
+    set(HBNSC_LICENSES "" CACHE STRING "Semicolon separated list of licenses to include. By default, all licenses will be included.")
+endif ()
 
 option(HBNSC_WITH_OPENSSL "Adds the OpenSSL license information to the licenses model. Requires openssl header files." ON)
 option(HBNSC_WITH_NEMONOTIFY "Adds the Nemo Notify lib license information to the licenses model." OFF)
