Fix directory definitions (#2)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,6 +56,9 @@ target_link_libraries(HbnSfosComponentsQt${QT_VERSION_MAJOR}
         PkgConfig::Silica
 )
 
+GNUInstallDirs_get_absolute_install_dir(HBNSC_ABS_ICONS_DIR HBNSC_ICONSDIR)
+GNUInstallDirs_get_absolute_install_dir(HBNSC_ABS_I18N_DIR HBNSC_I18NDIR)
+
 target_compile_definitions(HbnSfosComponentsQt${QT_VERSION_MAJOR}
     PRIVATE
         QT_NO_CAST_TO_ASCII
@@ -67,8 +70,8 @@ target_compile_definitions(HbnSfosComponentsQt${QT_VERSION_MAJOR}
         QT_USE_FAST_OPERATOR_PLUS
         QT_DISABLE_DEPRECATED_BEFORE=0x050500
         HBNSC_VERSION="${PROJECT_VERSION}"
-        HBNSC_ICONS_DIR="${HBNSC_ICONSDIR}"
-        HBNSC_L10N_DIR="${HBNSC_I18NDIR}"
+        HBNSC_ICONS_DIR="${HBNSC_ABS_ICONS_DIR}"
+        HBNSC_L10N_DIR="${HBNSC_ABS_I18N_DIR}"
         $<$<BOOL:${HBNSC_WITH_OPENSSL}>:HBNSC_WITH_OPENSSL>
         $<$<BOOL:${HBNSC_WITH_NEMONOTIFY}>:HBNSC_WITH_NEMONOTIFY>
         $<$<BOOL:${HBNSC_WITH_SQLITE}>:HBNSC_WITH_SQLITE>
@@ -108,7 +111,7 @@ install(TARGETS HbnSfosComponentsQt${QT_VERSION_MAJOR}
     EXPORT HbnSfosComponentsTargets
     DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT runtime
-    LIBRARY DESTINATION ${HBNSC_LIBDIR} COMPONENT runtime
-    ARCHIVE DESTINATION ${HBNSC_LIBDIR} COMPONENT runtime
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT runtime
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT runtime
     PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/HbnSfosComponents-qt${QT_VERSION_MAJOR} COMPONENT development EXCLUDE_FROM_ALL
 )
